fixed overflow for mobile devices having width less than 600px

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -12,7 +12,15 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
-* { outline: 1px solid red; } 
+.overflow{
+  overflow: visible;
+}
+@media only screen and (max-width: 600px) {
+  .overflow {
+    overflow: hidden;
+  }
+}
+/* * { outline: 1px solid red; }  */
 body {
  /* height: 100% !important;
 overflow: hidden !important;
